--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+.custom-datatable .p-datatable-tbody > tr {
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.custom-datatable .p-datatable-tbody > tr:hover {
+  background-color: #2c2c2c;
+}
